Fix front page appearance on mobile

--- a/src/base.css
+++ b/src/base.css
@@ -5,7 +5,7 @@ body {
 
 main {
   position: absolute;
-  width: 100%;
+  min-width: 100%;
   top: 0;
   bottom: 0;
 }
